# JobApplicationTracker

./: .gitignore  README.md  pyproject.toml
config/: config.yaml.example
src/ai_job_application_tracker/: __init__.py
src/ai_job_application_tracker/auth/: gmail_auth.py  outlook_auth.py
src/ai_job_application_tracker/utils/: config.py  logger.py  models.py
