[project]
name = "ai-job-application-tracker"
version = "0.1.0"
description = "AI-powered email analyzer that automatically tracks job applications across multiple email accounts using LLM analysis and Google Sheets integration"
readme = "README.md"
authors = [
    { name = "Shamkhal Hajiyev", email = "61028328+ShamkhalHajiyev@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    # Core dependencies
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    
    # Email providers
    "google-auth>=2.27.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.116.0",
    "msal>=1.26.0",
    
    # Google Sheets
    "gspread>=6.0.0",
    
    # Scheduling
    "APScheduler>=3.10.4",
    
    # Utilities
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
# LLM providers - install what you need
anthropic-support = ["anthropic>=0.18.0"]
openai-support = ["openai>=1.12.0"]
google-support = ["google-generativeai>=0.3.0"]
ollama-support = ["ollama>=0.1.0"]

# Install all LLM providers
all-llms = [
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "google-generativeai>=0.3.0",
    "ollama>=0.1.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

# Streamlit UI (optional)
ui = [
    "streamlit>=1.29.0",
    "plotly>=5.18.0",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
